--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo 'No build step required for this API'"
+    "build": "echo 'No build step required for this API'",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
